Fix grid window overflow

--- a/ui/css/root.css
+++ b/ui/css/root.css
@@ -4,6 +4,8 @@ body {
   height: 100vh;
   position: relative;
   margin: 0;
+
+  background: gray;
 }
 
 /*****************************************************************************\
@@ -12,9 +14,7 @@ body {
 
 .tile-grid {
   position: absolute;
-  /*top: 40px; right: 20px; bottom: 20px; left: 20px;*/
-  top: 0; right: 0; bottom: 0; left: 0;
-  background: gray;
+  top: 40px; right: 20px; bottom: 20px; left: 20px;
 }
 
 .grid-tile {
